--- a/testimonials.html
+++ b/testimonials.html
@@ -2,7 +2,7 @@
 layout: page
 permalink: /testimonials/
 title: Testimonials
-#subtitle: SOmething
+#subtitle: Something
 description: Frazer Kirkman testimonials, inspiring minds, changing lives.
 ---
 
