--- a/testimonials.html
+++ b/testimonials.html
@@ -16,7 +16,7 @@ description: Frazer Kirkman testimonials, inspiring minds, changing lives.
         <a href="{{testimonial.website}}">
             {% if testimonial.websiteName %}
             {{testimonial.websiteName}}
-            {% else }}
+            {% else %}
             {{testimonial.website}}
             {% endif %}
         </a><br>
