--- a/testimonials.html
+++ b/testimonials.html
@@ -22,7 +22,7 @@ description: Frazer Kirkman testimonials, inspiring minds, changing lives.
         </a><br>
         {% endif %}
         {% if testimonial.image %}
-        <img typeof="foaf:Image" src="/assets/img/tstimonial/{{testimonial.image}}" width="100" height="44" alt="" /></div>
+        <img typeof="foaf:Image" src="/assets/img/testimonial/{{testimonial.image}}" width="100" height="44" alt="" />
         {% endif %}
         {{testimonial.testimonial}}
     </div>
